<resources>
    <string name="app_name">ALC Challenge</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_activity_details">Details</string>
    <string name="myprofile">TextView</string>
    <string name="my_profile">My Profile</string>
    <string name="about">About</string>
    <string name="alc4_phase_1">ALC4 Phase 1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="about_alc_4_0">About ALC 4.0</string>
    <string name="my_profile_">My profile</string>
    <string name="track_android_cloud">Track: Android + Cloud</string>
    <string name="email_bgibendi01_gmail_com">Email: bgibendi01@gmail.com</string>
    <string name="phone_no_">Phone No. +254723775792</string>
    <string name="todo">TODO</string>
    <string name="slack_name_">Slack Name: @kingofspades</string>
    <string name="country_kenya">Country: Kenya</string>
    <string name="billy_g">Billy G</string>
</resources>
