<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="50dp"
        android:text="@string/welcome_to_alc_4_0"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearbuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/MyProfilebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:background="#E7A037"
            android:text="@string/my_profile_"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/AboutAlcbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="#E7A037"
            android:text="@string/about_alc"
            android:textColor="#000000"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>